EJS project is working!

--- a/ejs-project/views/partials/form.ejs
+++ b/ejs-project/views/partials/form.ejs
@@ -13,5 +13,6 @@
         <div class="col">
             <button type="submit" class="btn btn-outline-dark">Add Product</button>
         </div>
+        <script src="../../server.js"></script>
     </div>
 </form>
