Making Pug Project to work!

--- a/pug-project/views/form.pug
+++ b/pug-project/views/form.pug
@@ -13,3 +13,4 @@ html
                     input(type="text" class="form-control" placeholder="Stock(yes/no)" name="inStock")
                 div(class="col")
                     button(type="submit" class="btn btn-outline-dark") Add Product
+        script(src="../server.js") 
