--- a/pug-project/views/index.pug
+++ b/pug-project/views/index.pug
@@ -1,7 +1,7 @@
 html
     head
         link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css")
-        title="Pug Project"
+        title="PUG Project"
     body
         include header.pug
         section.container
