--- a/pug-project/views/productList.pug
+++ b/pug-project/views/productList.pug
@@ -1,5 +1,5 @@
 h2 Products
-if products.length == 0
+if products[0].length === 0
     br
     h4 Empty list. Add products to see.
 else
@@ -11,7 +11,7 @@ else
                 th(scope="col") price
                 th(scope="col") inStock 
         tbody
-            each product in products ? products : []
+            each product in products[0] ? products[0] : []
                 tr
                     th(scope="row")=product.id
                     td=product.name
